# codenight-case3

./: .env.example  .gitignore  EVENTS.md  FRAUDCELL_PLAN.md  GPT-ozet.md  README.md  SUNUM_RAPORU.md  case.md  case.txt  docker-compose.database-bootstrap.override.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.rabbitmq-acl.yml  docker-compose.rabbitmq-hardened.yml  docker-compose.yml  pytest.ini  requirements-dev.txt  security-bruteforce-test.mjs  security-idor-test.mjs  security-input-hardening-test.mjs  security-token-manipulation-test.mjs  security-unauthorized-test.mjs
BackEnd/: .env.example  (+3 more)
services/ai-service/: .coverage  .dockerignore  AI_MODEL.md  Dockerfile  README.md  alembic.ini  database.py  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt  test_main.py
services/ai-service/alembic/: env.py
services/ai-service/alembic/versions/: 0001_ai_schema.py  0002_ai_rls.py  0003_ai_event_projections.py  0004_pending_feedback.py  0005_out_of_order_and_outbox_terminal.py
services/ai-service/app/: __init__.py  cli.py  config.py  data_generator.py  database.py  decision.py  envelope.py  events.py  ids.py  main.py  model.py  rabbit_worker.py  schemas.py  security.py  training.py
services/ai-service/data/: fraud_transactions.csv
services/ai-service/ml/: __init__.py  features.py  generate_dataset.py  predictor.py  train_model.py  training_metrics.json
services/ai-service/tests/: test_api.py  test_cli.py  test_config.py  test_data_generator.py  test_database.py  test_decision_assignment.py  test_events.py  test_ids.py  test_rabbit_worker.py  test_security.py  test_training_model.py
services/ai-service/tests/integration/: test_rls_postgres.py
(+378 files in other folders)
